fixed spacing on navmenu to be solid bar

--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,8 @@
   
 }
 .navMenu{
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 16.6% 16.6% 16.6% 16.6% 16.6% 16.6% ;
   justify-content: space-around;
   width:100vw;
   height:50px;
@@ -25,6 +25,7 @@
 }
 .navItem{
   border: solid white 1px;
+  text-align: center;
   color: white;
   cursor: pointer;
   padding-left: 25px;
